Accordion header alignment fix

--- a/src/Components/ClubSideBar/ClubList/ClubListStyle.css
+++ b/src/Components/ClubSideBar/ClubList/ClubListStyle.css
@@ -23,6 +23,7 @@ img.icon {
 .card-header {
     text-align: left;
     font-weight: bold;
+    padding: 0px 0px 0px 0px;
 }
 
 .active-card .card-header {
